--- a/package.json
+++ b/package.json
@@ -1,36 +1,74 @@
 {
   "name": "react-hn",
-  "version": "1.7.1",
-  "description": "React-powered frontend for Hacker News using its Firebase API",
-  "author": "Jonny Buchanan",
+  "version": "1.7.2",
+  "description": "React haker news",
+  "author": "Grupo software angel",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "http://github.com/insin/react-hn.git"
+    "url": "https://github.com/ubuangel/IS_CI_CD_Hackernews"
   },
   "scripts": {
-    "build": "nwb build",
-    "lint": "eslint src",
-    "lint:fix": "npm run lint -- --fix",
-    "start": "nwb serve"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
+
   "dependencies": {
-    "events": "1.1.1",
-    "firebase": "3.4.1",
-    "history": "^2.1.2",
-    "object-assign": "^4.1.0",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
-    "react-router": "2.8.1",
-    "react-router-scroll": "^0.3.2",
-    "react-timeago": "3.1.3",
-    "reactfire": "1.0.0",
-    "scroll-behavior": "0.8.1",
-    "setimmediate": "1.0.5",
-    "url-parse": "^1.1.1"
+    "axios": "^0.21.2",
+
+
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.1",
+    "styled-components": "^4.3.2"
+
   },
+
+
   "devDependencies": {
-    "eslint-config-jonnybuchanan": "6.0.0",
-    "nwb": "0.22.0"
-  }
+    "@testing-library/react": "^9.1.3"
+  },
+
+
+    "jest": {
+  "collectCoverageFrom": [
+    "src/**/*.js",
+    "!src/index.js",
+    "!src/serviceWorker.js",
+    "!src/hooks/*.js",
+    "!src/selectors/*.js",
+    "!src/mappers/*.js",
+    "!src/utils/*.js"
+  ],
+  "coverageThreshold": {
+    "global": {
+      "branches": 95,
+      "functions": 95,
+      "lines": 95,
+      "statements": 95
+    }
+  },
+  "coverageReporters": [
+    "html",
+    "text"
+  ]
+  },
+
+
+  "browserslist": {
+  "production": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "development": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ]
+}
+
+
 }
