Add: Jenkinsfile and sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=Prueba1
+#sonar.projectKey=Prueba1
 
 # --- optional properties ---
 
 # defaults to project key
-sonar.projectName=Prueba1
+#sonar.projectName=Prueba1
 # defaults to 'not provided'
 #sonar.projectVersion=1.0
  
@@ -15,4 +15,4 @@ sonar.sources=.
 #sonar.sourceEncoding=UTF-8
 
 sonar.host.url=http://localhost:9000
-sonar.login=8792f24d1504ec97ab5926f72b5c0ccea9e20b56
+#sonar.login=8792f24d1504ec97ab5926f72b5c0ccea9e20b56
